Latest updates w/ analysis code

--- a/Gen_Synthetic_Data.ipynb
+++ b/Gen_Synthetic_Data.ipynb
@@ -25,19 +25,19 @@
     "\n",
     "import numpy as np\n",
     "import pickle\n",
+    "import pandas as pd\n",
     "\n",
     "from config import config\n",
     "from structure_learn import learn_structure\n",
     "from param_learn import learn_cond_marginals\n",
-    "from generate_data import generate_fake_data"
+    "from generate_data import generate_fake_data\n",
+    "import networkx as nx"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data, names, encoders = load_data()\n",
@@ -45,6 +45,7 @@
     "#Generate unique val counts on the whole dataset, before any splits\n",
     "unique_vals = [list(np.unique(data[i])) for i in range(len(data))]\n",
     "\n",
+    "#Preform test split\n",
     "data = np.swapaxes(data,0,1)\n",
     "train, test = train_test_split(data, test_size=config['test_size'], random_state=config['ran_state'])\n",
     "train = flip(train)"
@@ -58,6 +59,7 @@
    },
    "outputs": [],
    "source": [
+    "#Preform DP structure learning\n",
     "parents, order = learn_structure(train, unique_vals)"
    ]
   },
@@ -69,6 +71,7 @@
    },
    "outputs": [],
    "source": [
+    "#Get the conditional marginal counts for the non seed features\n",
     "count_dicts = learn_cond_marginals(train, parents, unique_vals, order)"
    ]
   },
@@ -81,23 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "generating samples\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sage/Data_Privacy/DPFinal/generate_data.py:95: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  probs = probs / np.sum(probs)\n",
-      "/home/sage/Data_Privacy/DPFinal/generate_data.py:96: RuntimeWarning: invalid value encountered in less\n",
-      "  new_val = np.random.choice(unique_vals[i], p=list(probs))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "generating samples\n",
       "1000\n",
       "2000\n",
       "3000\n",
@@ -107,11 +94,68 @@
       "7000\n",
       "8000\n",
       "9000\n",
-      "10000\n"
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sage/Data_Privacy/DPFinal/generate_data.py:96: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  probs = probs / np.sum(probs)\n",
+      "/home/sage/Data_Privacy/DPFinal/generate_data.py:97: RuntimeWarning: invalid value encountered in less\n",
+      "  new_val = np.random.choice(unique_vals[i], p=list(probs))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n"
      ]
     }
    ],
    "source": [
+    "#Generate the cond. marginals for the seeds and create fake data\n",
     "to_release = generate_fake_data(train, order, parents, count_dicts, unique_vals)"
    ]
   },
@@ -123,7 +167,7 @@
     {
      "data": {
       "text/plain": [
-       "10000"
+       "50000"
       ]
      },
      "execution_count": 6,
@@ -132,7 +176,9 @@
     }
    ],
    "source": [
-    "len(to_release)"
+    "#Optionally save as binned data\n",
+    "with open('generated.pkl', 'wb') as f:\n",
+    "    pickle.dump(to_release, f)"
    ]
   },
   {
@@ -143,8 +189,8 @@
    },
    "outputs": [],
    "source": [
-    "with open('generated.pkl', 'wb') as f:\n",
-    "    pickle.dump(to_release, f)"
+    "#Can also convert back to original format\n",
+    "fake_data = convert(to_release, names, encoders)"
    ]
   },
   {
